--- a/Data protection/MainWindow.xaml
+++ b/Data protection/MainWindow.xaml
@@ -7,19 +7,46 @@
         mc:Ignorable="d"
         Title="Ciphering program" Height="416.479" Width="800">
     <Grid>
-        <Button x:Name="Cipher" Content="Cipher" HorizontalAlignment="Left" Margin="556,318,0,0" VerticalAlignment="Top" Width="100" Height="35" AutomationProperties.HelpText="Click me" Click="Cipher_Button_Click"/>
+        <Button x:Name="Cipher" 
+                Content="Cipher" 
+                HorizontalAlignment="Left" 
+                Margin="556,318,0,0" 
+                VerticalAlignment="Top" 
+                Width="100" 
+                Height="35" 
+                AutomationProperties.HelpText="Click me" 
+                Click="Cipher_Button_Click"
+                KeyDown="EnterKeyDown"/>
         <Button x:Name="Decipher" Content="Decipher" HorizontalAlignment="Left" Margin="661,318,0,0" VerticalAlignment="Top" Width="100" Height="35" Click="Decipher_Button_Click"/>
         <TextBox x:Name="InputBox" HorizontalAlignment="Left" Height="250" Margin="28,47,0,0" TextWrapping="Wrap" Text="Input text you want to cipher here" VerticalAlignment="Top" Width="359" IsReadOnlyCaretVisible="True" IsManipulationEnabled="True" SpellCheck.IsEnabled="True"/>
         <TextBox x:Name="OutputBox" HorizontalAlignment="Left" Height="250" Margin="403,47,0,0" TextWrapping="Wrap" Text="Your output text will be displayed here" VerticalAlignment="Top" Width="358" AutomationProperties.HelpText="Your output text will be displayed here"/>
         <TextBox x:Name="Keyword" HorizontalAlignment="Left" Height="20" Margin="403,308,0,0" TextWrapping="Wrap" Text="Keyword" VerticalAlignment="Top" Width="100" TextOptions.TextFormattingMode="Display" MaxLines="1" MaxLength="32" IsUndoEnabled="True" TextAlignment="Center" />
-        <TextBox x:Name="CaesarKey" HorizontalAlignment="Left" Height="20" Margin="512,308,0,0" TextWrapping="Wrap" Text="Key" VerticalAlignment="Top" Width="25" TextOptions.TextFormattingMode="Display" MaxLines="1" MaxLength="32" IsUndoEnabled="True" TextAlignment="Center" RenderTransformOrigin="3.427,0.62" />
-        <RadioButton x:Name="CaesarSelection" Content="Caesar" HorizontalAlignment="Left" Margin="28,309,0,0" VerticalAlignment="Top" IsChecked="True"/>
-        <RadioButton x:Name="VigenerSelection" Content="Vigener" HorizontalAlignment="Left" Margin="28,341,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="HillSelection" Content="Hill method" HorizontalAlignment="Left" Margin="28,309,0,0" VerticalAlignment="Top" IsChecked="True"/>
+        <RadioButton x:Name="GammaSelection" Content="Gamma method" HorizontalAlignment="Left" Margin="28,341,0,0" VerticalAlignment="Top"/>
         <Button Content="Open file" HorizontalAlignment="Left" Margin="312,10,0,0" VerticalAlignment="Top" Width="75" Click="btnOpenFile_Click"/>
         <Button Content="Save file" HorizontalAlignment="Left" Margin="403,10,0,0" VerticalAlignment="Top" Width="75" Click="btnSaveFile_Click"/>
         <TextBlock HorizontalAlignment="Left" Margin="28,10,0,0" TextWrapping="Wrap" Text="Open text file with text you want to cipher/decipher or enter your text in the field below" VerticalAlignment="Top" Width="270"/>
         <CheckBox x:Name="notBruteforce" Content="I know key/keyword for deciphering" HorizontalAlignment="Left" Margin="551,358,0,0" VerticalAlignment="Top"/>
-
+        <Grid x:Name="KeyInputBox" Visibility="Collapsed">
+            <Grid Background="Black" Opacity="0.5"/>
+            <Border
+            MinWidth="250"
+            Background="Orange" 
+            BorderBrush="Black" 
+            BorderThickness="1" 
+            CornerRadius="0,55,0,55" 
+            HorizontalAlignment="Center" 
+            VerticalAlignment="Center">
+                <StackPanel>
+                    <TextBlock Margin="5" Text="Input Box:" FontWeight="Bold" FontFamily="Cambria" />
+                    <TextBox MinWidth="150" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="InputTextBox"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <Button x:Name="YesButton" Margin="5" Content="Yes" Background="{x:Null}" Click="YesButton_Click"/>
+                        <Button x:Name="NoButton" Margin="5" Content="No" Background="{x:Null}" Click="NoButton_Click" />
+                    </StackPanel>
+                </StackPanel>
+            </Border>
+        </Grid>
 
     </Grid>
 </Window>
