--- a/Data protection/MainWindow.xaml
+++ b/Data protection/MainWindow.xaml
@@ -1,10 +1,6 @@
 ﻿<Window x:Class="Data_protection.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:local="clr-namespace:Data_protection"
-		mc:Ignorable="d"
 		Title="Ciphering program" Height="416.479" Width="800">
 	<Grid>
 		<Button x:Name="Cipher" 
@@ -90,8 +86,7 @@
 					<TextBox MinWidth="150" 
 					         HorizontalAlignment="Center" 
 					         VerticalAlignment="Center" 
-					         x:Name="KeyInput"
-					         Text = "{Binding Key, Mode = TwoWay}" d:DataContext="{d:DesignInstance }" />
+					         x:Name="KeyInput"/>
 					<StackPanel Orientation="Horizontal"
 					            HorizontalAlignment="Center">
 					<RadioButton x:Name="LatinSelection" 
