--- a/Data protection/MainWindow.xaml
+++ b/Data protection/MainWindow.xaml
@@ -1,103 +1,104 @@
 ﻿<Window x:Class="Data_protection.MainWindow"
-		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		Title="Ciphering program" Height="416.479" Width="800">
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Title="Ciphering program" Height="416.479" Width="800">
 	<Grid>
-		<Button x:Name="Cipher" 
-				Content="Cipher" 
-				HorizontalAlignment="Left" 
-				Margin="556,318,0,0" 
-				VerticalAlignment="Top" 
-				Width="100" 
-				Height="35" 
-				AutomationProperties.HelpText="Click me" 
-				Click="Cipher_Button_Click"/>
-		<Button x:Name="Decipher" 
-				Content="Decipher" 
-				HorizontalAlignment="Left" 
-				Margin="661,318,0,0" 
-				VerticalAlignment="Top" 
-				Width="100" Height="35" 
-				Click="Decipher_Button_Click"/>
-		<TextBox x:Name="InputBox" 
-				 HorizontalAlignment="Left" 
-				 Height="250" Margin="28,47,0,0" 
-				 TextWrapping="Wrap" 
-				 Text="Input text you want to cipher here" 
-				 VerticalAlignment="Top" 
-				 Width="359" 
-				 IsReadOnlyCaretVisible="True" 
-				 IsManipulationEnabled="True" 
-				 SpellCheck.IsEnabled="True"
+		<Button x:Name="Cipher"
+		        Content="Cipher"
+		        HorizontalAlignment="Left"
+		        Margin="556,318,0,0"
+		        VerticalAlignment="Top"
+		        Width="100"
+		        Height="35"
+		        AutomationProperties.HelpText="Click me"
+		        Click="Cipher_Button_Click" />
+		<Button x:Name="Decipher"
+		        Content="Decipher"
+		        HorizontalAlignment="Left"
+		        Margin="661,318,0,0"
+		        VerticalAlignment="Top"
+		        Width="100" Height="35"
+		        Click="Decipher_Button_Click" />
+		<TextBox x:Name="InputBox"
+		         HorizontalAlignment="Left"
+		         Height="250" Margin="28,47,0,0"
+		         TextWrapping="Wrap"
+		         Text="Input text you want to cipher here"
+		         VerticalAlignment="Top"
+		         Width="359"
+		         IsReadOnlyCaretVisible="True"
+		         IsManipulationEnabled="True"
+		         SpellCheck.IsEnabled="True"
 		         KeyDown="EnterKeyDown"
-		         AcceptsReturn="True"/>
-		<TextBox x:Name="OutputBox" 
-				 HorizontalAlignment="Left" 
-				 Height="250" 
-				 Margin="403,47,0,0" 
-				 TextWrapping="Wrap" 
-				 Text="Your output text will be displayed here" 
-				 VerticalAlignment="Top" 
-				 Width="358"/>
-		<TextBlock HorizontalAlignment="Left" 
-				   Margin="28,10,0,0" 
-				   TextWrapping="Wrap" 
-				   Text="Open text file with text you want to cipher/decipher or enter your text in the field below" VerticalAlignment="Top" Width="270"/>
-		<Button Content="Open file" 
-				HorizontalAlignment="Left" 
-				Margin="312,10,0,0" 
-				VerticalAlignment="Top" 
-				Width="75" 
-				Click="OpenFile"/>
-		<Button Content="Save file" 
-				HorizontalAlignment="Left" 
-				Margin="403,10,0,0" 
-				VerticalAlignment="Top" 
-				Width="75" 
-				Click="SaveFile"/>
-		<Grid x:Name="KeyInputBox" 
+		         AcceptsReturn="True" />
+		<TextBox x:Name="OutputBox"
+		         HorizontalAlignment="Left"
+		         Height="250"
+		         Margin="403,47,0,0"
+		         TextWrapping="Wrap"
+		         Text="Your output text will be displayed here"
+		         VerticalAlignment="Top"
+		         Width="358" />
+		<TextBlock HorizontalAlignment="Left"
+		           Margin="28,10,0,0"
+		           TextWrapping="Wrap"
+		           Text="Open text file with text you want to cipher/decipher or enter your text in the field below"
+		           VerticalAlignment="Top" Width="270" />
+		<Button Content="Open file"
+		        HorizontalAlignment="Left"
+		        Margin="312,10,0,0"
+		        VerticalAlignment="Top"
+		        Width="75"
+		        Click="OpenFile" />
+		<Button Content="Save file"
+		        HorizontalAlignment="Left"
+		        Margin="403,10,0,0"
+		        VerticalAlignment="Top"
+		        Width="75"
+		        Click="SaveFile" />
+		<Grid x:Name="KeyInputBox"
 		      Visibility="Collapsed">
-			<Grid Background="Black" Opacity="0.5"/>
+			<Grid Background="Black" Opacity="0.5" />
 			<Border
-			MinWidth="300"
-			Background="DarkSlateGray" 
-			BorderBrush="Black" 
-			BorderThickness="1" 
-			CornerRadius="30,30,30,30" 
-			HorizontalAlignment="Center" 
-			VerticalAlignment="Center">
+				MinWidth="300"
+				Background="DarkSlateGray"
+				BorderBrush="Black"
+				BorderThickness="1"
+				CornerRadius="30,30,30,30"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center">
 				<StackPanel>
-					<TextBlock Margin="10" 
-					           Text="Your keyword:" 
-					           FontWeight="Bold" 
+					<TextBlock Margin="10"
+					           Text="Your keyword:"
+					           FontWeight="Bold"
 					           FontFamily="Cambria"
-					           Foreground="Azure"/>
-					<TextBox MinWidth="150" 
-					         HorizontalAlignment="Center" 
-					         VerticalAlignment="Center" 
-					         x:Name="KeyInput"/>
+					           Foreground="Azure" />
+					<TextBox MinWidth="150"
+					         HorizontalAlignment="Center"
+					         VerticalAlignment="Center"
+					         x:Name="XInput" />
 					<StackPanel Orientation="Horizontal"
 					            HorizontalAlignment="Center">
-					<RadioButton x:Name="LatinSelection" 
-					             Content="Latin alphabet" 
-					             HorizontalAlignment="Left" 
-					             VerticalAlignment="Top" 
-					             IsChecked="True"
-					             Foreground="Azure"/>
-					<RadioButton x:Name="CyrilicSelection" 
-					             Content="Cyrilic alphabet" 
-					             HorizontalAlignment="Left" 
-					             VerticalAlignment="Top"
-					             Foreground="Azure"/>
+						<RadioButton x:Name="LatinSelection"
+						             Content="Latin alphabet"
+						             HorizontalAlignment="Left"
+						             VerticalAlignment="Top"
+						             IsChecked="True"
+						             Foreground="Azure" />
+						<RadioButton x:Name="CyrilicSelection"
+						             Content="Cyrilic alphabet"
+						             HorizontalAlignment="Left"
+						             VerticalAlignment="Top"
+						             Foreground="Azure" />
 					</StackPanel>
 					<StackPanel Orientation="Horizontal"
 					            HorizontalAlignment="Center">
 						<Button x:Name="OkButton"
-						        Margin="5" 
-						        Content="Ok" 
-						        Background="WhiteSmoke" 
-						        Click="Ok"/>
-						<Button x:Name="CancelButton" 
+						        Margin="5"
+						        Content="Ok"
+						        Background="WhiteSmoke"
+						        Click="Ok" />
+						<Button x:Name="CancelButton"
 						        Margin="5"
 						        Content="Cancel"
 						        Background="WhiteSmoke"
